# learning-rust

./: Cargo.toml  README.md  controlflow.rs  slices.rs
src/: armstrong.rs  brackets.rs  child_process.rs  clock.rs  clock_better.rs  command.rs  comments.md  data_types.rs  devowel  devowel.rs  dsl.rs  file.rs  fold.rs  functions.rs  graph.rs  highscore.rs  http.rs  iterator.rs  leap.rs  loop.rs  main.rs  map.rs  methods.rs  nthprime.rs  operators.rs  options.rs  ownership.rs  primefactors.rs  primefactors_new.rs  proverb.rs  python_example.py  raindrops.rs  reference.rs  request.rs  reverse.rs  slices  slices.rs  string  string.rs  stringconcat.rs  (+6 more)
templates/: index.html
tests/: sometest.rs
