[package]
name = "learning-rust"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
rand = "0.3.14"
reqwest = { version = "0.10.8", features = ["json"]}
chrono = "0.4"
rocket = "0.4.6"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.11"
serde_derive = "*"
simplelog = "0.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[[bin]]
name = "proverb"
path = "src/proverb.rs"

[[bin]]
name = "request"
path = "src/request.rs"

[[bin]]
name = "http"
path = "src/http.rs"